unpackaged/objects/Revision_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Character__c</fullName>
        <label>Character</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_Revision__c</fullName>
        <label>Code Revision</label>
        <referenceTo>Code_Revision__c</referenceTo>
        <relationshipName>Revision_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <label>Line</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Revision_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Revision Comment</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revision Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>